preventing bounce on IOS/safari

--- a/css/linguago.css
+++ b/css/linguago.css
@@ -1,3 +1,8 @@
+body,
+html {
+    position: fixed;
+}
+
 @keyframes fade {
     0% {
         opacity: 0;
@@ -6,6 +11,8 @@
         opacity: 1;
     }
 }
+
+
 
 @keyframes wipeFromRight_kf {
     0% {
@@ -46,7 +53,7 @@ body {
     margin: 0;
     touch-action: none;
     height: 100%;
-    background-color: red;
+    background-color: orange;
 }
 
 ul {
@@ -89,4 +96,7 @@ svg #background {
 
 .answer:hover {
     background-color: lightskyblue;
+}
+.live_icon {
+    fill:'red'
 }
